--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "chart.js": "^4.4.5",
     "font-awesome": "^4.7.0",
+    "frontend-createquiz": "file:",
     "mammoth": "^1.8.0",
     "next": "14.2.15",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^18",
-    "sweetalert2": "^11.14.3",
+    "sweetalert2": "^11.14.4",
+    "sweetalert2-react-content": "^5.0.7",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
